Fix horizontal overflow

--- a/project-fortis-interfaces/src/styles/Global.css
+++ b/project-fortis-interfaces/src/styles/Global.css
@@ -39,7 +39,7 @@ html, body, #leafletMap {
 }
 
 #content {
-    width: 100%;
+    width: 98%;
 }
 
 .fortis-navbar {
